# task_Solana

./: .gitignore  README.md
cossack_business/: Anchor.toml  README.md  package.json
cossack_business/helpers/: setup.ts  utils.ts
cossack_business/migrations/: deploy.ts
cossack_business/programs/crafting/: Cargo.toml
cossack_business/programs/crafting/src/: constants.rs  errors.rs  lib.rs
cossack_business/programs/crafting/src/instructions/: craft_item.rs  mod.rs
cossack_business/programs/item_nft/: Cargo.toml
cossack_business/programs/item_nft/src/: constants.rs  errors.rs  lib.rs  state.rs
cossack_business/programs/item_nft/src/instructions/: burn_item.rs  create_item.rs  initialize_item_nft.rs  mod.rs  transfer_item_ownership.rs
cossack_business/programs/magic_token/: Cargo.toml
cossack_business/programs/magic_token/src/: errors.rs  lib.rs  state.rs
cossack_business/programs/magic_token/src/instructions/: initialize_magic_token.rs  mint_magic_token.rs  mod.rs
cossack_business/programs/marketplace/: Cargo.toml
cossack_business/programs/marketplace/src/: errors.rs  lib.rs  state.rs
cossack_business/programs/marketplace/src/instructions/: buy_item.rs  delist_item.rs  list_item.rs  mod.rs  sell_item.rs
cossack_business/programs/resource_manager/: Cargo.toml
cossack_business/programs/resource_manager/src/: constants.rs  errors.rs  lib.rs  state.rs
cossack_business/programs/resource_manager/src/instructions/: admin_only.rs  burn_resource.rs  initialize_game.rs  initialize_resource.rs  mint_resource.rs  mod.rs
cossack_business/programs/search/: Cargo.toml
cossack_business/programs/search/src/: constants.rs  errors.rs  lib.rs  state.rs
cossack_business/programs/search/src/instructions/: mod.rs  register_player.rs  search_resources.rs
cossack_business/scripts/: deploy-devnet.sh  initialize.ts
cossack_business/tests/: crafting.ts  initialization.ts  marketplace.ts  player-registration.ts  search.ts  security.ts
cossack_business/tests/helpers/: setup.ts  utils.ts
