[package]
name = "item_nft"
version = "0.1.0"
description = "Manages NFT item creation/burning via Metaplex for Cossack Business game"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "item_nft"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
mpl-token-metadata = "5.0.0-beta.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
