[package]
name = "marketplace"
version = "0.1.0"
description = "NFT marketplace with MagicToken economy for Cossack Business game"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "marketplace"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "item_nft/idl-build", "magic_token/idl-build", "resource_manager/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = { version = "0.32.1", features = ["token_2022"] }
item_nft = { path = "../item_nft", features = ["cpi"] }
magic_token = { path = "../magic_token", features = ["cpi"] }
resource_manager = { path = "../resource_manager", features = ["cpi"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
