[package]
name = "resource_manager"
version = "0.1.0"
description = "Manages SPL Token-2022 resource mints with MetadataPointer for Cossack Business game"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "resource_manager"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = { version = "0.32.1", features = ["token_2022"] }
spl-token-2022 = { version = "7.0.0", features = ["no-entrypoint"] }
spl-token-metadata-interface = "0.5.1"
spl-type-length-value = "0.6.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
